# kiwi-shell

./: .SRCINFO  .gitignore  PKGBUILD  README.md  app.ts  defaultConfig.json  dependencies.json  flake.nix  install.sh  package-lock.json  setup-types.sh  style.scss  tsconfig.json
app-capture/: AppCapture-1.0.gir  README.md  app-capture.c  app-capture.h  meson.build
docs/: AppSwitcherKeybinds.md  screenshots.md
docs/screenshots/: screenshots.md
src/desktop/: app.ts
src/desktop/style/: bar.scss  global.scss  powerMenu.scss  workspaces.scss
src/desktop/widget/: AppSwitcher.tsx  Bar.tsx  SystemMenu.tsx  ThemeTab.tsx  polls.tsx
src/desktop/widgets/AppSwitcher/: clientCachingService.tsx
src/desktop/widgets/Bar/: Bar.tsx  PowerMenu.tsx  Workspaces.tsx
src/desktop/widgets/Bar/SystemMenu/: SystemMenu.tsx
src/desktop/widgets/Bar/SystemMenu/tabs/: BluetoothTab.tsx  PerformanceTab.tsx  ThemeTab.tsx
src/desktop/widgets/Dock/: Dock.tsx
src/kiwi-shell/: app.ts  app.tsx  defaultConfig.json  style.scss
src/kiwi-shell/style/: appSwitcher.scss  bar.scss  dock.scss  global.scss  indicatorBar.scss  notifications.scss  prompts.scss  systemMenu.scss  tray.scss  workspaces.scss
src/kiwi-shell/style/themes/: glass.scss
src/kiwi-shell/widgets/: Misc.tsx  brightness.tsx  config.tsx  desktopEntries.tsx  iconNames.tsx  prompts.tsx  requirements.tsx  sound.tsx
src/kiwi-shell/widgets/AppSwitcher/: AppSwitcher.tsx  clientCachingService.tsx
src/kiwi-shell/widgets/Bar/: Bar.tsx  Workspaces.tsx
src/kiwi-shell/widgets/Bar/SystemMenu/: SystemMenu.tsx
src/kiwi-shell/widgets/Bar/SystemMenu/tabs/: BluetoothTab.tsx  NetworkTab.tsx  PerformanceTab.tsx  SystemTab.tsx  ThemeTab.tsx  hardwarePolling.tsx
src/kiwi-shell/widgets/Dock/: AppIcon.tsx  Dock.tsx  DockButtons.tsx  dock-state.tsx  dock-utils.tsx
src/kiwi-shell/widgets/IndicatorBar/: IndicatorBar.tsx
src/kiwi-shell/widgets/Notifications/: NotificationCenter.tsx
style/: appSwitcher.scss  dock.scss  global.scss  indicatorBar.scss  systemMenu.scss
style/themes/: glass.scss
widget/: AppSwitcher.tsx  Bar.tsx  BluetoothTab.tsx  CalendarTab.tsx  Dock.tsx  IndicatorBar.tsx  Misc.tsx  NetworkTab.tsx  PowerMenu.tsx  SystemMenu.tsx  SystemTab.tsx  ThemeTab.tsx  clientCachingService.tsx  colorOperations.tsx  colors.tsx  config.tsx  filterAppIcons.tsx  iconNames.tsx  polls.tsx
